# school

./: .gitignore  chem.html  demo.py  dump.rdb  gscholar.py  main.rs  parse.py  physics.html  requirements.txt
data/: cs.html  math.html
data/new/: bcs.html  bio.html  bioe.html  che.html  chm.html  cs.html  earth.html  ece.html  eco.html  ling.html  matsci.html  meche.html  mth.html  opt.html  phil.html  phy.html
datasource/: gscholar.py  parse.py  scrape.py
parsed/: out.json
parsed/checkpoint/: chem_1.104466026.json  cs_1.268887659.json  cs_1723076144.json  cs_1723089902.json  math_1.919844319.json
server/: Cargo.toml
server/scripts/: redis.sh  start.sh
server/src/: lib.rs  main.rs  model.rs  server.rs
static/: index.html  serve.sh
