[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
redis = { version = "*" }
actix-web = "4.8.0"
clap = { version = "4.5.14", features = ["derive"] }
